--- a/style1.css
+++ b/style1.css
@@ -30,3 +30,11 @@ img{
     justify-content: center;
     align-items: center;
 }
+#datetime{
+    display: block;
+    align-text: center;
+    font-weight: bold;
+    padding: 20px;
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+}
